# LuxDB

./: .gitconfig  .gitignore  .pypirc  .replit  .sigillum  ARCHITECTURE_DECISIONS.md  DEVELOPER_GUIDE.md  FEDERACJA_STRUCTURE.md  LICENSE  MANIFEST.md  RAPORT_REORGANIZACJI.md  README.md  VM_DEPLOYMENT.md  __init__.py  astral_dashboard.html  database_visual_report.py  deploy_vm.py  example.py  federa_chat.py  federa_web.py  luxdb_local_test_results.json  luxdb_v2_service.py  luxdb_v3_service.py  main.py  manager.py  pyproject.toml  requirements.txt  requirements_test.txt  server.py  setup.py  start_astra_pure.py  start_astral_kernel.py  start_dynamic_federation.py  start_kernel.py  system_state_manager.py  test.py  test_error_location.py  test_example_manifest.py  test_federation_identity.py  test_gpt_chat.py  (+16 more)
Notes na przyszłość/: frontend.md
archiwum/: README.md
attached_assets/: Pasted--LuxSafe-Schemat-struktury-bezpiecze-stwa-astralnego-Zasady-kluczowe-Brak-loginu-brak-Oaut-1750090913949_1750090913950.txt  Pasted--Plan-Strukturalny-Kernela-Kompletny-Schemat-1-Cel-Kernela-Minimalny-niezale-ny-modu-start-1751816474014_1751816474014.txt  Pasted--Warstwa-0-Pierwotna-Pre-Soul-Core-System-bezduszny-ale-sprawiedliwy-jak-BIOS-Bezduszna--1751978658469_1751978658469.txt  Pasted--workspace-pip-install-twine-python-setup-py-sdist-bdist-wheel-twine-upload-dist-Collecting-t-1749902816299_1749902816300.txt  Pasted-ERROR-luxdb-manager-B-d-sesji-z-baz-test-luxdb-sqlite3-IntegrityError-UNIQUE-constraint-failed--1749979088547_1749979088547.txt
db/: _metadata.db  example.db
docs/: API_MANIFEST.md  ARCHITECTURE_MANIFEST.md  ASTRAL_ENGINE_FUNCTIONS.md  ASTRAL_ENGINE_INTENT.md  ASTRAL_ENGINE_README.md  COMPONENTS_MANIFEST.md  FEATURE_COMPARISON.md  MIGRATION_GUIDE.md
examples/: 01_basic_setup.py  02_querybuilder_usage.py  03_migrations.py  04_sync_databases.py  05_raw_sql_examples.py  06_advanced_tools_examples.py  06_model_generator_examples.py  07_data_analysis_examples.py  07_luxsafe_examples.py  08_real_world_scenarios.py  08_websocket_client_test.py  09_api_client_test.py  10_luxws_bidirectional_test.py  README.md  (+5 more)
(+279 files in other folders)
